--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<p> Here are some life moments captured, with colours and reflects that inspired me. I took all my pictures with my Iphone.</p>
 
 					<img src="images/photo tabouret.jpg" class="tabouret photo">
-					<img src="images/photo ciel.jpeg" class="ciel photo">
+					<img src="images/photo ciel.jpg" class="ciel photo">
 					<img src="images/photo café.jpg" class="café photo">
 			
 
