--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
 				<p> Here are some life moments captured, with colours and reflects that inspired me. I took all my pictures with my Iphone.</p>
 
-					<img src="images/photo tabouret.jpg" class="tabouret photo">
-					<img src="images/photo ciel.jpg" class="ciel photo">
-					<img src="images/photo café.jpg" class="café photo">
+					<img src="images/photo-tabouret.jpg" class="tabouret photo">
+					<img src="images/photo-ciel.jpg" class="ciel photo">
+					<img src="images/photo-cafe.jpg" class="café photo">
 			
 
 
@@ -128,7 +128,7 @@
 						</p>
 
 						<p>
-							<a href="https://www.instagram.com/		thomas.dalfarra/" target="_blank"> Thomas Dal Farra</a>
+							<a href="https://www.instagram.com/thomas.dalfarra/" target="_blank"> Thomas Dal Farra</a>
 						</p>
 
 							
